# tinyraycaster

./: CMakeLists.txt  README.md  gui.cpp
include/: framebuffer.h  map.h  player.h  raycast.h  sprite.h  texture.h
src/: framebuffer.cpp  map.cpp  raycast.cpp  texture.cpp  utils.cpp
